working on dashboard

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -25,7 +25,7 @@
 				<h1>WE ARE UNDER CONSTRUCTION</h1>
 				{% for bill in spent %}
 					{% if user.id == session.user_id %}
-					<p>{{bill.price}}</p>
+					<p>Hello</p>
 					{% endif %}
 				{% endfor %}
 			</td>
