--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -25,11 +25,11 @@
 				<h1>WE ARE UNDER CONSTRUCTION</h1>
 				{% for bill in spent %}
 					{% if user.id == session.user_id %}
-					<p>Hello</p>
+						<p>Hello</p>
+						<p>bill.description</p>
 					{% endif %}
 				{% endfor %}
 			</td>
-
 		</table>
 	</div>
 </body>
