wokring on adding expense and dashboard

--- a/flask_app/templates/spent.html
+++ b/flask_app/templates/spent.html
@@ -18,6 +18,14 @@
 		</div>
         <form action="/create" method="post">
         <h3>Bought something, Lets see!!</h3>
+        <h3>Add a new recipe!</h3>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div>
+                    <strong>Ops! Somethings not long enough!</strong>
+                </div>
+                {% endif %} 
+            {% endwith %}
             <div>
 			    <div class="col-4">
                     <div class="form-group">
