--- a/flask_app/static/css/newsstyle.css
+++ b/flask_app/static/css/newsstyle.css
@@ -12,7 +12,7 @@ body{
 a{
 	text-decoration: none;
 }
-h1{
+h1{ 
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -29,4 +29,11 @@ h3{
 }
 #links{
 	display: flex;
+}
+strong{
+	display: flex;
+	color: aliceblue;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
