--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -25,8 +25,7 @@
 				<h1>WE ARE UNDER CONSTRUCTION</h1>
 				{% for bill in spent %}
 					{% if user.id == session.user_id %}
-						<p>Hello</p>
-						<p>bill.description</p>
+						<p>{{bill.description}}</p>
 					{% endif %}
 				{% endfor %}
 			</td>
