--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=, initial-scale=1.0">
+	<meta name="viewport" content="width=0, initial-scale=1.0">
 	<title>Budget</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/dash.css') }}">
@@ -31,7 +31,7 @@
 							<td class="tabledata">{{bill.expense}}</td>
 							<td class="tabledata">{{bill.description}}</td>
 							<td class="tabledata">{{bill.price}}</td>
-							<td class="tabledata"><a href="">Edit</a></td>
+							<td class="tabledata"><a href="">Edit</a></td>	
 						{% endif %}
 					</tr>
 				{% endfor %}
