Graph is working!!!

--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -16,8 +16,8 @@
 	<div>
 		<label class="text" for="take_home_pay">Take Home Pay</label>
 		<input type="currency" name="take_home_pay">
-		{% for var in total %}
-			{{var.total}}
+		{% for var in x %}
+			{{var}}
 		{% endfor %}
 	</div>
 </body>
