--- a/flask_app/templates/spent.html
+++ b/flask_app/templates/spent.html
@@ -13,7 +13,7 @@
 			<h1>Welcome {{user.first_name}}!</h1>
 			<div id="links">
 				<a href="/dash">Dashboard</a>
-				<a href="/log">Logout</a>
+				<a href="/logout">Logout</a>
 			</div>
 		</div>
         <form action="/create" method="post">
