--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="d-flex justify-content-between align-items-center col-12">
 		<a href="/acc">Account</a>
-		<a href="add">Add Payment</a>
-		<a href="/pie">Show Chart</a>
+		<a href="/add">Add Payment</a>
+		<a href="/chart">Show Chart</a>
 		<a href="/logout">Logout</a>
 	</nav>
 	<div id="main" class="col-4 mx-auto">
