--- a/flask_app/templates/chart.html
+++ b/flask_app/templates/chart.html
@@ -8,6 +8,13 @@
 	<style>
 		body{
 			background-color: black;
+			width: 900px;
+		}
+		canvas{
+			width: 900px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 	</style>
 </head>
