--- a/flask_app/templates/chart.html
+++ b/flask_app/templates/chart.html
@@ -7,7 +7,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.0.4/dist/Chart.min.js"></script>
 	<style>
 		body{
-			background-color: black;
+			background-color: aqua;
 			width: 900px;
 		}
 		canvas{
@@ -40,5 +40,6 @@
 			borderWidth: 1,}]},
 		options: {scales: {y: {beginAtZero: true}}}});
 	</script>
+	{{response}}
 </body>
 </html>
